Converted every CSS property in the site to logical properties. Capitalized "GitHub" correctly in the dropdown menu; The footer social icons are now imported using a relative path; Updated packages;
Signed-off-by: TheOnlyTails <theonlytails@theonlytails.com>

--- a/src/layout/CommunitySection/CommunitySection.scss
+++ b/src/layout/CommunitySection/CommunitySection.scss
@@ -23,8 +23,7 @@
 
 		// Align descriptions to center
 		p {
-			margin-right: auto;
-			margin-left: auto;
+			margin-inline: auto;
 		}
 	}
 
@@ -49,8 +48,8 @@
 
 		canvas {
 			position: absolute;
-			top: 0;
-			left: 0;
+			inset-block-start: 0;
+			inset-inline-start: 0;
 			z-index: -1;
 			width: 100%;
 			height: 100%;
@@ -88,7 +87,7 @@
 		max-width: 2800px;
 
 		// Preserve box-shadows when overflow is hidden
-		margin-bottom: -128px;
+		margin-block-end: -128px;
 		padding: 64px 0 128px 0;
 		overflow: hidden;
 
@@ -106,7 +105,7 @@
 		}
 
 		&::before {
-			left: 0;
+			inset-inline-start: 0;
 			background-image: linear-gradient(
 							90deg,
 							var(--background-secondary),
@@ -115,7 +114,7 @@
 		}
 
 		&::after {
-			right: 0;
+			inset-inline-end: 0;
 			background: linear-gradient(
 							90deg,
 							transparent,
@@ -127,24 +126,24 @@
 	// Contributor rows
 	&row {
 		position: relative;
-		margin-bottom: 12px;
+		margin-block-end: 12px;
 		white-space: nowrap;
 
 		// Space out contributor cards
 		:global(.contributor) {
-			margin-right: 12px;
+			margin-inline-end: 12px;
 		}
 
 		// Add some variation between rows
 		&:nth-child(even) {
-			left: 24px;
-			float: left;
+			inset-inline-start: 24px;
+			float: inline-start;
 			animation: contributors-right 80s linear infinite alternate;
 		}
 
 		&:nth-child(odd) {
-			left: -24px;
-			float: right;
+			inset-inline-start: -24px;
+			float: inline-end;
 			animation: contributors-left 80s linear infinite alternate;
 		}
 
