--- a/src/lib/HeaderChip/HeaderChip.scss
+++ b/src/lib/HeaderChip/HeaderChip.scss
@@ -1,6 +1,6 @@
 .header-chip {
 	display: inline-flex;
-	margin-bottom: 8px;
+	margin-block-end: 8px;
 	padding: 4px 16px;
 	border-radius: 50px;
 	background-color: var(--subtle-color-secondary);
