--- a/src/lib/HyperlinkButton/HyperlinkButton.scss
+++ b/src/lib/HyperlinkButton/HyperlinkButton.scss
@@ -17,7 +17,7 @@
 		weight: normal;
 	}
 	text-decoration: none;
-	text-align: left;
+	text-align: start;
 	word-break: break-word;
 	transition: 83ms ease background-color;
 	user-select: none;
