--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -177,7 +177,7 @@
 	}
 
 	.line-numbers .line-numbers-rows {
-		border-right-color: #a5a5a5;
+		border-inline-end-color: #a5a5a5;
 	}
 
 	.line-numbers-rows > span:before {
