--- a/src/lib/Button/Button.scss
+++ b/src/lib/Button/Button.scss
@@ -14,7 +14,7 @@
 		weight: normal;
 	}
 	text-decoration: none;
-	text-align: left;
+	text-align: start;
 	word-break: break-word;
 	transition: 83ms ease background-color, 83ms ease box-shadow;
 	user-select: none;
@@ -28,7 +28,7 @@
 		// "Default" style
 		&standard {
 			border-color: var(--control-stroke-default);
-			border-top-color: var(--control-stroke-secondary);
+			border-block-start-color: var(--control-stroke-secondary);
 			background-color: var(--control-color-default);
 			color: var(--text-color-primary);
 			background-clip: padding-box;
@@ -36,7 +36,7 @@
 			// Light theme styles
 			@media (prefers-color-scheme: light) {
 				border-color: var(--control-stroke-default);
-				border-bottom-color: var(--control-stroke-secondary);
+				border-block-end-color: var(--control-stroke-secondary);
 			}
 
 			// Interaction states
@@ -64,7 +64,7 @@
 		// "Accent" style
 		&accent {
 			border-color: var(--control-accent-stroke-default);
-			border-bottom-color: var(--control-accent-stroke-secondary);
+			border-block-end-color: var(--control-accent-stroke-secondary);
 			background-color: var(--accent-color-default);
 			color: var(--accent-text-contrast-primary);
 
