--- a/src/lib/ContentDialog/ContentDialog.scss
+++ b/src/lib/ContentDialog/ContentDialog.scss
@@ -13,7 +13,7 @@
 
 	h2 {
 		margin: 0;
-		margin-bottom: 12px;
+		margin-block-end: 12px;
 		color: var(--text-color-primary);
 		font: {
 			size: 2rem;
@@ -25,8 +25,8 @@
 	&-smoke {
 		@include flex($direction: column, $align: center, $justify: center);
 		position: fixed;
-		top: 0;
-		left: 0;
+		inset-block-start: 0;
+		inset-inline-start: 0;
 		z-index: 100;
 		width: 100%;
 		height: 100%;
@@ -47,7 +47,7 @@
 
 	footer {
 		@include flex($align: center, $justify: end, $gap: 8px);
-		border-top: 1px solid var(--card-stroke-default);
+		border-block-start: 1px solid var(--card-stroke-default);
 		white-space: nowrap;
 
 		:global(.button) {
