--- a/src/lib/FeatureCard/FeatureCard.scss
+++ b/src/lib/FeatureCard/FeatureCard.scss
@@ -7,7 +7,7 @@
 	border-radius: var(--control-corner-radius);
 	background-color: var(--background-tertiary);
 	box-shadow: 0 0 0 1px var(--card-stroke-default);
-	text-align: left;
+	text-align: start;
 	transition: 250ms ease;
 	cursor: default;
 	break-inside: avoid-column;
@@ -28,7 +28,7 @@
 
 	h4 {
 		margin: 0;
-		margin-top: 8px;
+		margin-block-start: 8px;
 		color: var(--text-color-primary);
 		font: {
 			size: 1.8rem;
@@ -38,7 +38,7 @@
 
 	p {
 		margin: 0;
-		margin-top: 8px;
+		margin-block-start: 8px;
 		color: var(--text-color-tertiary);
 		font: {
 			size: 1.4rem;
