--- a/src/lib/MenuFlyout/MenuFlyout.scss
+++ b/src/lib/MenuFlyout/MenuFlyout.scss
@@ -18,7 +18,7 @@
 	border-radius: var(--overlay-corner-radius);
 	background-color: var(--background-quarternary);
 	box-shadow: var(--flyout-elevation);
-	text-align: left;
+	text-align: start;
 	animation: menu-flyout 200ms cubic-bezier(0, 0, 0, 1);
 	user-select: none;
 }
@@ -27,8 +27,8 @@
 	.menu-flyout-outer {
 		position: absolute;
 		overflow: hidden;
-		top: 100%;
-		left: 50%;
+		inset-block-start: 100%;
+		inset-inline-start: 50%;
 		@include flex($justify: center);
 		z-index: 10;
 		width: calc(var(--menu-flyout-width, 100%) + 32px);
