--- a/src/lib/TextBox/TextBox.scss
+++ b/src/lib/TextBox/TextBox.scss
@@ -37,11 +37,11 @@
 
 	&-underline {
 		position: absolute;
-		bottom: 0;
-		left: 0;
+		inset-block-end: 0;
+		inset-inline-start: 0;
 		width: 100%;
 		height: 100%;
-		border-bottom: 1px solid var(--control-strong-stroke-default);
+		border-block-end: 1px solid var(--control-strong-stroke-default);
 		border-radius: calc(var(--control-corner-radius) - 0.75px);
 		pointer-events: none;
 
@@ -54,7 +54,7 @@
 			&:focus-within,
 			&.flyout-visible {
 				.textbox-underline {
-					border-bottom: 2px solid var(--accent-color-default);
+					border-block-end: 2px solid var(--accent-color-default);
 					border-radius: 0;
 				}
 			}
@@ -118,7 +118,7 @@
 		box-sizing: border-box;
 		width: 30px;
 		height: 22px;
-		margin-right: 4px;
+		margin-inline-end: 4px;
 		padding: 4px 0;
 		border: none;
 		border-radius: var(--control-corner-radius);
