--- a/src/lib/Titlebar/Titlebar.scss
+++ b/src/lib/Titlebar/Titlebar.scss
@@ -4,7 +4,7 @@
 	@include flex($align: center);
 	position: relative;
 	height: 32px;
-	padding-left: 16px;
+	padding-inline-start: 16px;
 	color: var(--text-color-primary);
 	font-size: var(--control-font-size);
 
