--- a/src/styles/_markdown.scss
+++ b/src/styles/_markdown.scss
@@ -7,11 +7,11 @@
 
 	// Spacing
 	> *:first-child {
-		margin-top: 0 !important;
+		margin-block-start: 0 !important;
 	}
 
 	> *:last-child {
-		margin-bottom: 0 !important;
+		margin-block-end: 0 !important;
 	}
 
 	> *:only-child {
@@ -26,8 +26,8 @@
 	pre,
 	table,
 	ul {
-		margin-top: 0;
-		margin-bottom: 16px;
+		margin-block-start: 0;
+		margin-block-end: 16px;
 	}
 
 	// Images
@@ -58,7 +58,7 @@
 	// Header text (<h1> through <h6>)
 	h1,
 	h2 {
-		padding-bottom: 0.3em;
+		padding-block-end: 0.3em;
 	}
 
 	h1,
@@ -67,8 +67,8 @@
 	h4,
 	h5,
 	h6 {
-		margin-top: 24px;
-		margin-bottom: 16px;
+		margin-block-start: 24px;
+		margin-block-end: 16px;
 		color: var(--text-color-primary);
 		font-weight: 600;
 		line-height: 1.25;
@@ -104,17 +104,17 @@
 	ol ul,
 	ul ol,
 	ul ul {
-		margin-top: 0;
-		margin-bottom: 0;
+		margin-block-start: 0;
+		margin-block-end: 0;
 	}
 
 	ol,
 	ul {
-		padding-left: 2em;
+		padding-inline-start: 2em;
 	}
 
 	li + li {
-		margin-top: 0.25em;
+		margin-block-start: 0.25em;
 	}
 
 	ol ol,
@@ -124,7 +124,7 @@
 
 	ol,
 	ul {
-		padding-left: 2em;
+		padding-inline-start: 2em;
 	}
 
 	// Codeblocks
@@ -160,7 +160,7 @@
 	blockquote {
 		margin: 0;
 		padding: 0 1em;
-		border-left: 0.25em solid var(--subtle-color-secondary);
+		border-inline-start: 0.25em solid var(--subtle-color-secondary);
 		color: var(--text-muted);
 	}
 
@@ -188,7 +188,7 @@
 	hr {
 		margin: 24px 0;
 		border: none;
-		border-top: 1px solid var(--divider-color-default);
+		border-block-start: 1px solid var(--divider-color-default);
 	}
 
 	// Tables
