--- a/src/styles/pages/blog.scss
+++ b/src/styles/pages/blog.scss
@@ -11,8 +11,8 @@
 
 .blog-backdrop {
 	position: absolute;
-	top: -64px;
-	left: 0;
+	inset-block-start: -64px;
+	inset-inline-start: 0;
 	z-index: -1;
 	width: 100%;
 	opacity: 0.25;
@@ -32,9 +32,9 @@
 	grid-gap: 48px;
 	align-items: center;
 	width: 100%;
-	margin-bottom: 72px;
-	padding-bottom: 72px;
-	border-bottom: 1px solid var(--divider-color-default);
+	margin-block-end: 72px;
+	padding-block-end: 72px;
+	border-block-end: 1px solid var(--divider-color-default);
 	@media only screen and (max-width: 1024px) {
 		grid-template-columns: auto;
 	}
@@ -67,5 +67,5 @@
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 	grid-gap: 24px;
-	margin-top: 24px;
+	margin-block-start: 24px;
 }
