--- a/src/lib/Titlebar/Titlebar.scss
+++ b/src/lib/Titlebar/Titlebar.scss
@@ -40,7 +40,7 @@
 			}
 
 			&:active {
-				background-color: hsla(5, 75%, 44%, 0.9);
+				background-color: hsl(5, 75%, 44%, 0.9);
 				color: transparentize(white, 0.3);
 			}
 		}
