--- a/src/layout/HeroSection/HeroSection.scss
+++ b/src/layout/HeroSection/HeroSection.scss
@@ -85,9 +85,10 @@
 			height: 100%;
 			mask: url("/ui/hero-mask.png") bottom right/cover no-repeat;
 			animation: canvas-hue-rotate 15s infinite linear;
-			--gradient-color-1: #52dd70;
-			--gradient-color-2: #00d6b9;
-			--gradient-color-3: #0491e2;
+			// this is only in #-HEX format for the hero section gradient to work
+			--gradient-color-1: #50dc6f;
+			--gradient-color-2: #00d6ba;
+			--gradient-color-3: #0390e2;
 			--gradient-color-4: var(--background-base);
 
 			@media (prefers-color-scheme: light) {
@@ -128,10 +129,7 @@
 			max-height: 100%;
 			border: 1px solid var(--surface-stroke-default);
 			border-radius: calc(var(--overlay-corner-radius) / 1.5);
-			background-color: rgba(
-							var(--mica-tint),
-							calc(var(--mica-tint-opacity) / 1.5)
-			);
+			background-color: hsl(var(--mica-tint), calc(var(--mica-tint-opacity) / 1.5));
 			box-shadow: var(--window-elevation);
 			overflow: hidden;
 			user-select: none;
