--- a/src/layout/Navbar/Navbar.scss
+++ b/src/layout/Navbar/Navbar.scss
@@ -156,7 +156,7 @@
 		inset-inline-start: 0;
 		width: 100%;
 		height: 64px;
-		background-color: rgba(var(--mica-tint), var(--mica-tint-opacity));
+		background-color: hsl(var(--mica-tint), var(--mica-tint-opacity));
 		overflow: visible;
 		backdrop-filter: blur(60px) saturate(150%);
 	}
