--- a/src/layout/ThemesSection/ThemesSection.scss
+++ b/src/layout/ThemesSection/ThemesSection.scss
@@ -48,111 +48,111 @@
 		//
 		// CSS variables behave rather strange.
 		// Setting a scoped variable that changes the value
-		// in another parent variable's hsla() function
+		// in another parent variable's hsl(0, 0%, 0%() function
 		// doesn't actually update the actual parent color.
 		//
 		// This means that we are basically forced to hardcode
-		// hex colors for our accent color, since we use hsla
+		// hex colors for our accent color, since we use hsl
 		// calcs. That really sucks. /rant
 		&.theme- {
 			&2 {
-				--focus-stroke-outer: #fff;
-				--accent-color-default: #3ecc9c;
-				--accent-color-secondary: #70ccad;
-				--accent-color-tertiary: #339b78;
+				--focus-stroke-outer: white;
+				--accent-color-default: hsl(160, 58%, 52%);
+				--accent-color-secondary: hsl(160, 47%, 62%);
+				--accent-color-tertiary: hsl(160, 50%, 40%);
 				--accent-text-default: var(--accent-color-default);
 				--accent-text-tertiary: var(--accent-color-secondary);
 				--text-color-primary: var(--accent-color-default);
-				--text-color-tertiary: #a6aebf;
-				--text-color-secondary: #a6aebf;
-				--subtle-color-secondary: #363c4a;
-				--subtle-color-tertiary: #2f3541;
-				--background-base: #2b303a;
+				--text-color-tertiary: hsl(221, 16%, 70%);
+				--text-color-secondary: hsl(221, 16%, 70%);
+				--subtle-color-secondary: hsl(222, 16%, 25%);
+				--subtle-color-tertiary: hsl(220, 16%, 22%);
+				--background-base: hsl(220, 15%, 20%);
 				--background-quarternary: var(--subtle-color-secondary);
-				--dots-color: #404859;
+				--dots-color: hsl(221, 16%, 30%);
 			}
 
 			&3 {
-				--focus-stroke-outer: #fff;
-				--accent-color-default: #6441a4;
-				--accent-color-secondary: #7d5bbf;
+				--focus-stroke-outer: white;
+				--accent-color-default: hsl(261, 43%, 45%);
+				--accent-color-secondary: hsl(260, 44%, 55%);
 				--accent-color-tertiary: var(--accent-color-secondary);
 				--accent-text-default: var(--text-color-tertiary);
 				--accent-text-tertiary: var(--accent-color-secondary);
-				--accent-text-contrast-primary: #fff;
-				--accent-text-contrast-secondary: rgba(255, 255, 255, 0.6);
-				--text-color-primary: #fff;
-				--text-color-secondary: #b19dd8;
+				--accent-text-contrast-primary: white;
+				--accent-text-contrast-secondary: hsl(white, 0.6);
+				--text-color-primary: white;
+				--text-color-secondary: hsl(260, 43%, 73%);
 				--text-color-tertiary: var(--text-color-secondary);
-				--subtle-color-secondary: #2c2642;
-				--subtle-color-tertiary: #211d2f;
-				--background-base: #17141f;
+				--subtle-color-secondary: hsl(253, 27%, 20%);
+				--subtle-color-tertiary: hsl(253, 24%, 15%);
+				--background-base: hsl(256, 22%, 10%);
 				--background-quarternary: var(--subtle-color-tertiary);
-				--dots-color: #2c2642;
+				--dots-color: hsl(253, 27%, 20%);
 			}
 
 			&4 {
-				--focus-stroke-outer: #000;
-				--accent-color-default: #fff;
-				--accent-color-secondary: rgba(255, 255, 255, 0.8);
-				--accent-color-tertiary: rgba(255, 255, 255, 0.6);
+				--focus-stroke-outer: black;
+				--accent-color-default: white;
+				--accent-color-secondary: hsl(white, 0.8);
+				--accent-color-tertiary: hsl(white, 0.6);
 				--accent-text-default: var(--text-color-tertiary);
 				--accent-text-tertiary: var(--accent-text-default);
-				--accent-text-contrast-primary: #000;
+				--accent-text-contrast-primary: black;
 				--accent-text-contrast-secondary: var(--accent-text-contrast-primary);
-				--text-color-primary: #000;
-				--text-color-tertiary: #332500;
+				--text-color-primary: black;
+				--text-color-tertiary: hsl(44, 100%, 10%);
 				--text-color-secondary: var(--text-color-primary);
-				--subtle-color-secondary: #fff;
-				--subtle-color-tertiary: rgba(0, 0, 0, 0.1);
-				--background-base: #feb400;
-				--background-quarternary: #ffda80;
-				--dots-color: rgba(0, 0, 0, 0.2);
+				--subtle-color-secondary: white;
+				--subtle-color-tertiary: hsl(black, 0.1);
+				--background-base: hsl(43, 100%, 50%);
+				--background-quarternary: hsl(43, 100%, 75%);
+				--dots-color: hsl(black, 0.2);
 
 				.hyperlink-button {
-					--subtle-color-secondary: rgba(0, 0, 0, 0.05);
+					--subtle-color-secondary: hsl(black, 0.05);
 				}
 			}
 
 			&5 {
-				--focus-stroke-outer: #fff;
-				--accent-color-default: #eee8d5;
-				--accent-color-secondary: #fdf6e3;
-				--accent-color-tertiary: #e8e1c9;
+				--focus-stroke-outer: white;
+				--accent-color-default: hsl(46, 42%, 88%);
+				--accent-color-secondary: hsl(44, 87%, 94%);
+				--accent-color-tertiary: hsl(46, 40%, 85%);
 				--accent-text-default: var(--text-color-tertiary);
 				--accent-text-tertiary: var(--accent-color-secondary);
-				--accent-text-contrast-primary: #586e75;
-				--accent-text-contrast-secondary: #657b83;
-				--text-color-primary: #fdf6e3;
-				--text-color-tertiary: #93a1a1;
-				--text-color-secondary: #839496;
-				--subtle-color-secondary: #073642;
-				--subtle-color-tertiary: #083945;
-				--background-base: #002b36;
+				--accent-text-contrast-primary: hsl(194, 14%, 40%);
+				--accent-text-contrast-secondary: hsl(196, 13%, 45%);
+				--text-color-primary: hsl(44, 87%, 94%);
+				--text-color-tertiary: hsl(180, 7%, 60%);
+				--text-color-secondary: hsl(186, 8%, 55%);
+				--subtle-color-secondary: hsl(192, 81%, 14%);
+				--subtle-color-tertiary: hsl(192, 79%, 15%);
+				--background-base: hsl(192, 100%, 11%);
 				--background-quarternary: var(--accent-color-secondary);
 				--dots-color: var(--accent-text-contrast-primary);
 			}
 
 			&6 {
-				--focus-stroke-outer: #000;
-				--accent-color-default: #88c0d0;
-				--accent-color-secondary: #79b8ca;
-				--accent-color-tertiary: #6bb1c4;
+				--focus-stroke-outer: black;
+				--accent-color-default: hsl(193, 43%, 67%);
+				--accent-color-secondary: hsl(193, 43%, 63%);
+				--accent-color-tertiary: hsl(193, 43%, 59%);
 				--accent-text-default: var(--text-color-tertiary);
 				--accent-text-tertiary: var(--text-color-secondary);
 				--accent-text-contrast-primary: var(--text-color-primary);
 				--accent-text-contrast-secondary: var(--text-color-tertiary);
-				--text-color-primary: #2e3440;
-				--text-color-tertiary: #4c566a;
+				--text-color-primary: hsl(220, 16%, 22%);
+				--text-color-tertiary: hsl(220, 16%, 36%);
 				--text-color-secondary: var(--text-color-primary);
 				--subtle-color-secondary: var(--accent-color-default);
-				--subtle-color-tertiary: #bec8da;
-				--background-base: #d8dee9;
-				--background-quarternary: #3b4252;
+				--subtle-color-tertiary: hsl(219, 27%, 80%);
+				--background-base: hsl(219, 28%, 88%);
+				--background-quarternary: hsl(222, 16%, 28%);
 				--dots-color: var(--text-color-tertiary);
 
 				.hyperlink-button {
-					--subtle-color-secondary: #ced6e3;
+					--subtle-color-secondary: hsl(217, 27%, 85%);
 				}
 			}
 		}
