--- a/src/lib/BlogCard/BlogCard.scss
+++ b/src/lib/BlogCard/BlogCard.scss
@@ -19,7 +19,7 @@
 	}
 
 	&:active {
-		box-shadow: 0 1px 2px rgba(0, 0, 0, 0.13);
+		box-shadow: 0 1px 2px hsl(0, 0%, 0%, 0.13);
 		transform: none;
 	}
 
