--- a/src/styles/_markdown.scss
+++ b/src/styles/_markdown.scss
@@ -46,8 +46,8 @@
 		img {
 			max-width: 100%;
 			height: auto;
-			border-radius: var(--overlay-corner-radius);
 			border: 1px solid var(--card-stroke-default);
+			border-radius: var(--overlay-corner-radius);
 		}
 
 		figcaption {
@@ -141,6 +141,16 @@
 		word-wrap: break-word;
 	}
 
+	kbd {
+		padding: 0.3em 0.4em;
+		color: hsl(70, 5%, 22%);
+		box-shadow: inset 0 -.2em 0 var(--subtle-color-tertiary);
+
+		@media (prefers-color-scheme: dark) {
+			color: hsl(0, 0%, 83%);
+		}
+	}
+
 	pre {
 		padding: 12px 16px;
 		border: 1px solid var(--card-stroke-default);
@@ -161,8 +171,8 @@
 	blockquote {
 		margin: 0;
 		padding: 0 1em;
-		border-inline-start: 0.25em solid var(--subtle-color-secondary);
 		color: var(--text-muted);
+		border-inline-start: 0.25em solid var(--subtle-color-secondary);
 	}
 
 	// Anchors
