A bunch of small fixes (#17)
* Started fixing a bunch of small issues:
- Meta images now load correctly based on the page
- The error window now has a min width and height
- Fixed the text wrapping issue on the file preview showcase
- Fixed a typo on the file preview showcase
- Updated packages.

Signed-off-by: TheOnlyTails <theonlytails@theonlytails.com>

* Made the new Microsoft Store popup use mini mode

* Converted every CSS property in the site to logical properties.
Capitalized "GitHub" correctly in the dropdown menu;
The footer social icons are now imported using a relative path;
Updated packages;

Signed-off-by: TheOnlyTails <theonlytails@theonlytails.com>

* The footer icons once again use the $static alias

because netlify, that's why

* Reworked commit messages

* Updated to the new zip release format on GitHub

* Bump dependencies

* Fixed the contributor scrolling animation.
Small formatting fixes.
Updated packages.

Signed-off-by: TheOnlyTails <theonlytails@theonlytails.com>

* Made the tabs in the tabs showcase selectable.
Small formatting fixes.

Signed-off-by: TheOnlyTails <theonlytails@theonlytails.com>

* Added Husky pre-commit hook to upgrade packages.

Signed-off-by: TheOnlyTails <theonlytails@theonlytails.com>

* Added husky prepare npm script to automatically have Git hooks enabled after install.

Signed-off-by: TheOnlyTails <theonlytails@theonlytails.com>

* Converted all the colors around the site to the HSL format.
Fixed Windows OS detection.
Added a hover effect to the placeholder files in the tabs showcase.

Signed-off-by: TheOnlyTails <theonlytails@theonlytails.com>

* Fixed inline code wrapping in markdown.
Closes #44

Signed-off-by: TheOnlyTails <theonlytails@theonlytails.com>

Co-authored-by: Marcel Wagner <marcel.alex.wagner@outlook.com>

--- a/src/lib/Titlebar/Titlebar.scss
+++ b/src/lib/Titlebar/Titlebar.scss
@@ -4,7 +4,7 @@
 	@include flex($align: center);
 	position: relative;
 	height: 32px;
-	padding-left: 16px;
+	padding-inline-start: 16px;
 	color: var(--text-color-primary);
 	font-size: var(--control-font-size);
 
@@ -40,7 +40,7 @@
 			}
 
 			&:active {
-				background-color: hsla(5, 75%, 44%, 0.9);
+				background-color: hsl(5, 75%, 44%, 0.9);
 				color: transparentize(white, 0.3);
 			}
 		}
