--- a/src/layout/CommunitySection/CommunitySection.scss
+++ b/src/layout/CommunitySection/CommunitySection.scss
@@ -10,21 +10,20 @@
 	// light-ish background, we'll need to hardcode
 	// some variables.
 	&text {
-		text-align: center; // Align text to center
-		--background-base: #f3f3f3;
-		--text-color-primary: #202020;
-		--text-color-secondary: #282828;
+		text-align: center;
+		--background-base: hsl(0, 0%, 95%);
+		--text-color-primary: hsl(0, 0%, 13%);
+		--text-color-secondary: hsl(0, 0%, 16%);
 		--text-color-tertiary: var(--text-color-secondary);
-		--subtle-color-secondary: rgba(0, 0, 0, 0.095);
-		--subtle-color-tertiary: rgba(0, 0, 0, 0.024);
-		--subtle-color-disabled: rgba(255, 255, 255, 0);
+		--subtle-color-secondary: hsl(0, 0%, 0%, 0.095);
+		--subtle-color-tertiary: hsl(0, 0%, 0%, 0.024);
+		--subtle-color-disabled: transparent;
 		--accent-text-default: var(--accent-color-dark-3);
 		--accent-text-tertiary: var(--accent-color-dark-2);
 
 		// Align descriptions to center
 		p {
-			margin-right: auto;
-			margin-left: auto;
+			margin-inline: auto;
 		}
 	}
 
@@ -40,17 +39,17 @@
 		padding: 72px 48px;
 		border-radius: var(--overlay-corner-radius);
 		background-color: #f9f9f9;
-		box-shadow: 0 2.74416px 2.74416px rgb(0 0 0 / 3%),
-		0 5.48831px 5.48831px rgb(0 0 0 / 4%),
-		0 13.7208px 10.9766px rgb(0 0 0 / 5%),
-		0 20.5812px 20.5812px rgb(0 0 0 / 6%),
-		0 41.1623px 41.1623px rgb(0 0 0 / 7%),
-		0 96.0454px 89.1851px rgb(0 0 0 / 9%);
+		box-shadow: 0 2.74416px 2.74416px hsl(0, 0%, 0%, 3%),
+		0 5.48831px 5.48831px hsl(0, 0%, 0%, 4%),
+		0 13.7208px 10.9766px hsl(0, 0%, 0%, 5%),
+		0 20.5812px 20.5812px hsl(0, 0%, 0%, 6%),
+		0 41.1623px 41.1623px hsl(0, 0%, 0%, 7%),
+		0 96.0454px 89.1851px hsl(0, 0%, 0%, 9%);
 
 		canvas {
 			position: absolute;
-			top: 0;
-			left: 0;
+			inset-block-start: 0;
+			inset-inline-start: 0;
 			z-index: -1;
 			width: 100%;
 			height: 100%;
@@ -88,7 +87,7 @@
 		max-width: 2800px;
 
 		// Preserve box-shadows when overflow is hidden
-		margin-bottom: -128px;
+		margin-block-end: -128px;
 		padding: 64px 0 128px 0;
 		overflow: hidden;
 
@@ -106,7 +105,7 @@
 		}
 
 		&::before {
-			left: 0;
+			inset-inline-start: 0;
 			background-image: linear-gradient(
 							90deg,
 							var(--background-secondary),
@@ -115,7 +114,7 @@
 		}
 
 		&::after {
-			right: 0;
+			inset-inline-end: 0;
 			background: linear-gradient(
 							90deg,
 							transparent,
@@ -127,23 +126,23 @@
 	// Contributor rows
 	&row {
 		position: relative;
-		margin-bottom: 12px;
+		margin-block-end: 12px;
 		white-space: nowrap;
 
 		// Space out contributor cards
 		:global(.contributor) {
-			margin-right: 12px;
+			margin-inline-end: 12px;
 		}
 
 		// Add some variation between rows
 		&:nth-child(even) {
-			left: 24px;
+			inset-inline-start: 24px;
 			float: left;
 			animation: contributors-right 80s linear infinite alternate;
 		}
 
 		&:nth-child(odd) {
-			left: -24px;
+			inset-inline-start: -24px;
 			float: right;
 			animation: contributors-left 80s linear infinite alternate;
 		}
