--- a/src/layout/FeaturesSection/FeatureShowcase.scss
+++ b/src/layout/FeaturesSection/FeatureShowcase.scss
@@ -23,10 +23,10 @@
 	border: 1px solid var(--surface-stroke-default);
 	border-radius: var(--overlay-corner-radius);
 	background-color: var(--background-base);
-	box-shadow: 0 2.74416px 2.74416px rgb(0 0 0 / 3%),
-		0 5.48831px 5.48831px rgb(0 0 0 / 4%), 0 13.7208px 10.9766px rgb(0 0 0 / 5%),
-		0 20.5812px 20.5812px rgb(0 0 0 / 6%), 0 41.1623px 41.1623px rgb(0 0 0 / 7%),
-		0 96.0454px 89.1851px rgb(0 0 0 / 9%);
+	box-shadow: 0 2.74416px 2.74416px hsl(0, 0%, 0%, 3%),
+	0 5.48831px 5.48831px hsl(0, 0%, 0%, 4%), 0 13.7208px 10.9766px hsl(0, 0%, 0%, 5%),
+	0 20.5812px 20.5812px hsl(0, 0%, 0%, 6%), 0 41.1623px 41.1623px hsl(0, 0%, 0%, 7%),
+	0 96.0454px 89.1851px hsl(0, 0%, 0%, 9%);
 	font-family: "Segoe UI Variable Text", var(--font-family-sans-serif);
 	user-select: none;
 
@@ -42,8 +42,7 @@
 @keyframes feature-panel {
 	from {
 		opacity: 0;
-		transform: translate(var(--panel-offset, 0px), var(--panel-offset, 0px))
-			scale(calc(0.9 + var(--panel-scale, 0)));
+		transform: translate(var(--panel-offset, 0px), var(--panel-offset, 0px)) scale(calc(0.9 + var(--panel-scale, 0)));
 		transform-origin: bottom;
 	}
 }
@@ -120,13 +119,12 @@
 .cloud-files-showcase {
 	width: 416px;
 	max-width: 100%;
-	animation: feature-panel 500ms cubic-bezier(0.165, 0.84, 0.44, 1) backwards
-		400ms;
+	animation: feature-panel 500ms cubic-bezier(0.165, 0.84, 0.44, 1) backwards 400ms;
 
 	// Files table (details view)
 	table {
 		width: 100%;
-		margin-bottom: 3px;
+		margin-block-end: 3px;
 		border-collapse: collapse;
 		line-height: 1.4rem;
 		white-space: nowrap;
@@ -143,8 +141,8 @@
 				&::after {
 					content: "";
 					position: absolute;
-					top: 3px;
-					left: 5px;
+					inset-block-start: 3px;
+					inset-inline-start: 5px;
 					z-index: 0;
 					width: calc(100% - 10px);
 					height: 30px;
@@ -172,18 +170,18 @@
 
 			// Blank first cell for the file icon
 			&:first-child {
-				padding-right: 6px;
-				padding-left: 12px;
-				border-left: none;
+				padding-inline-end: 6px;
+				padding-inline-start: 12px;
+				border-inline-start: none;
 			}
 		}
 
 		// Table headers
 		th {
-			border-bottom: 1px solid var(--control-stroke-default);
-			border-left: 1px solid var(--control-stroke-default);
+			border-block-end: 1px solid var(--control-stroke-default);
+			border-inline-start: 1px solid var(--control-stroke-default);
 			font-weight: 600;
-			text-align: left;
+			text-align: start;
 
 			&:last-child {
 				width: 100%;
@@ -202,8 +200,7 @@
 
 			:global(svg) {
 				@include icon($size: 20px);
-				animation: 250ms ease feature-item-scale backwards
-					calc(600ms + (100ms * var(--file-index)));
+				animation: 250ms ease feature-item-scale backwards calc(600ms + (100ms * var(--file-index)));
 			}
 		}
 	}
@@ -215,24 +212,22 @@
 		width: 108px;
 		height: auto;
 		transform: rotate(var(--provider-rotate));
-		filter: drop-shadow(0 4px 12px rgba(0, 0, 0, 0.25));
+		filter: drop-shadow(0 4px 12px hsl(0, 0%, 0%, 0.25));
 
 		&:nth-child(1) {
-			bottom: 36px;
-			left: -54px;
-			animation: cloud-provider 250ms cubic-bezier(0.165, 0.84, 0.44, 1)
-					backwards 800ms,
-				cloud-provider-float 10s ease infinite 1000ms;
+			inset-block-end: 36px;
+			inset-inline-start: -54px;
+			animation: cloud-provider 250ms cubic-bezier(0.165, 0.84, 0.44, 1) backwards 800ms,
+			cloud-provider-float 10s ease infinite 1000ms;
 			--provider-rotate: 5deg;
 		}
 
 		&:nth-child(2) {
-			top: 12px;
-			right: -54px;
+			inset-block-start: 12px;
+			inset-inline-end: -54px;
 			width: 128px;
-			animation: cloud-provider 250ms cubic-bezier(0.165, 0.84, 0.44, 1)
-					backwards 1000ms,
-				cloud-provider-float 10s ease infinite 1400ms;
+			animation: cloud-provider 250ms cubic-bezier(0.165, 0.84, 0.44, 1) backwards 1000ms,
+			cloud-provider-float 10s ease infinite 1400ms;
 			--provider-rotate: -8deg;
 		}
 	}
@@ -248,8 +243,7 @@
 		width: 260px;
 		height: 390px;
 		border-radius: var(--overlay-corner-radius) 0 0 var(--overlay-corner-radius);
-		animation: 400ms cubic-bezier(0.1, 0.9, 0.2, 1) preview-pane-open backwards
-			800ms;
+		animation: 400ms cubic-bezier(0.1, 0.9, 0.2, 1) preview-pane-open backwards 800ms;
 
 		// Inner preview pane elements
 		// File preview and file metadata
@@ -345,7 +339,7 @@
 
 		// Used to display file name
 		h4 {
-			margin-bottom: 5px;
+			margin-block-end: 5px;
 			font: {
 				size: 20px;
 				weight: 600;
@@ -363,9 +357,8 @@
 
 		// Used as secondary headers for metadata entries
 		h6 {
-			margin: 0;
-			margin-top: 8px;
-			margin-bottom: 2px;
+			margin-inline: 0;
+			margin-block: 8px 2px;
 			font: {
 				size: var(--control-font-size);
 				weight: normal;
@@ -382,8 +375,7 @@
 		display: grid;
 		grid-gap: 4px;
 		padding: 12px;
-		animation: feature-panel 500ms cubic-bezier(0.165, 0.84, 0.44, 1) backwards
-			400ms;
+		animation: feature-panel 500ms cubic-bezier(0.165, 0.84, 0.44, 1) backwards 400ms;
 
 		// File entries
 		.file {
@@ -408,7 +400,7 @@
 				border-radius: calc(var(--control-corner-radius) + 2px);
 				background-color: var(--subtle-color-secondary);
 				box-shadow: inset 0 0 0 2px var(--accent-color-default),
-					inset 0 0 0 3px var(--background-base);
+				inset 0 0 0 3px var(--background-base);
 			}
 
 			// File entry icon
@@ -423,8 +415,7 @@
 // Tags showcase
 .tags-showcase {
 	.showcase-panel {
-		animation: feature-panel 500ms cubic-bezier(0.165, 0.84, 0.44, 1) backwards
-			400ms;
+		animation: feature-panel 500ms cubic-bezier(0.165, 0.84, 0.44, 1) backwards 400ms;
 	}
 
 	> .showcase-panel {
@@ -436,15 +427,14 @@
 	.tags-picker {
 		@include flex($gap: 16px);
 		position: absolute;
-		bottom: -24px;
+		inset-block-end: -24px;
 		z-index: 1;
 		padding: 12px;
 		animation-delay: 600ms;
 	}
 
 	:global(.color-swatch) {
-		animation: 250ms ease feature-item-scale backwards
-			calc(800ms + (100ms * var(--color-index)));
+		animation: 250ms ease feature-item-scale backwards calc(800ms + (100ms * var(--color-index)));
 	}
 }
 
@@ -457,23 +447,20 @@
 		position: absolute;
 		width: 400px;
 		height: 300px;
-		animation: feature-panel 500ms cubic-bezier(0.165, 0.84, 0.44, 1) backwards
-			800ms;
+		animation: feature-panel 500ms cubic-bezier(0.165, 0.84, 0.44, 1) backwards 800ms;
 		overflow: hidden;
 
 		&:first-child {
 			transform: translate(var(--panel-offset), var(--panel-offset));
-			animation: feature-panel 500ms cubic-bezier(0.165, 0.84, 0.44, 1)
-					backwards 400ms,
-				merge-windows 250ms ease forwards 2s;
+			animation: feature-panel 500ms cubic-bezier(0.165, 0.84, 0.44, 1) backwards 400ms,
+			merge-windows 250ms ease forwards 2s;
 			--panel-offset: -32px;
 		}
 
 		&:last-child {
 			transform: translate(var(--panel-offset), var(--panel-offset));
-			animation: feature-panel 500ms cubic-bezier(0.165, 0.84, 0.44, 1)
-					backwards 1200ms,
-				merge-windows 250ms ease forwards 2s;
+			animation: feature-panel 500ms cubic-bezier(0.165, 0.84, 0.44, 1) backwards 1200ms,
+			merge-windows 250ms ease forwards 2s;
 			--panel-offset: 32px;
 		}
 	}
@@ -481,7 +468,7 @@
 	.files-grid {
 		animation: fade 250ms ease backwards 2.2s;
 		background-color: var(--layer-color-default);
-		border-top: 1px solid var(--card-stroke-default);
+		border-block-start: 1px solid var(--card-stroke-default);
 		flex: 1 1 auto;
 		padding: 12px;
 		display: grid;
@@ -494,11 +481,16 @@
 		animation: 250ms ease feature-item-scale backwards calc(2.4s + (100ms * var(--file-index)));
 		border-radius: var(--control-corner-radius);
 		background-color: var(--subtle-color-secondary);
+
+		&:hover {
+			background-color: var(--control-color-secondary);
+		}
 	}
 
 	.tabs-anchor {
 		position: absolute;
-		margin-top: -40px;
+		margin-block-start: -40px;
+
 		.showcase-panel {
 			position: relative;
 		}
@@ -516,38 +508,44 @@
 		background-clip: padding-box;
 		backdrop-filter: blur(10px);
 		color: var(--text-color-primary);
-		font: {
-			size: var(--control-font-size);
-		}
+		font-size: var(--control-font-size);
+
 		&:nth-child(2) {
 			animation-delay: 2.6s;
 		}
+
 		&:last-child {
 			animation-delay: 2.8s;
 		}
+
 		&:hover {
 			background-color: var(--subtle-color-secondary);
 		}
+
 		&:active {
 			background-color: var(--subtle-color-tertiary);
 		}
+
 		&.selected {
 			box-shadow: var(--card-elevation);
 			background-color: var(--control-color-default);
-			border-top-color: var(--control-stroke-secondary);
+			border-block-start-color: var(--control-stroke-secondary);
+
 			@media (prefers-color-scheme: light) {
-				border-top-color: var(--control-color-default);
-				border-bottom-color: var(--control-color-secondary) 
+				border-block-start-color: var(--control-color-default);
+				border-block-end-color: var(--control-color-secondary);
 			}
 		}
+
 		img {
 			width: 16px;
 			height: 16px;
 			flex: 0 0 auto;
 		}
+
 		&-row {
 			@include flex($align: center, $gap: 8px);
-			margin-bottom: 8px;
+			margin-block-end: 8px;
 			animation: show-overflow 0ms linear forwards 2.8s;
 			z-index: 1;
 			overflow: hidden;
