Started working on a new omnibus PR, general cleanup. Doesn't load yet, still haven't figured out what's wrong.
Signed-off-by: TheOnlyTails <theonlytails@theonlytails.com>

--- a/src/layout/Footer/Footer.scss
+++ b/src/layout/Footer/Footer.scss
@@ -14,10 +14,8 @@
         .hyperlink-button {
             display: block;
             width: fit-content;
-            margin: {
-                inline: -11px;
-                block-end: 8px;
-            }
+            margin-inline: -11px;
+            margin-block-end: 8px;
             &:last-child {
                 margin-block-end: 0;
             }
