--- a/src/layout/HeroSection/HeroSection.scss
+++ b/src/layout/HeroSection/HeroSection.scss
@@ -75,7 +75,7 @@
 		}
 
 		// Backdrop canvas
-		canvas {
+		.rainbow-background {
 			position: absolute;
 			inset-inline-end: 0;
 			inset-block-end: 0;
