Fixed frontmatter metadata on blog posts (Curse you WebStorm!!!!!). Moved some CSS from the general Feature Showcase file to the Cloud Showcase stylesheet.
Signed-off-by: TheOnlyTails <theonlytails@theonlytails.com>

--- a/src/layout/FeaturesSection/cloud/CloudShowcase.scss
+++ b/src/layout/FeaturesSection/cloud/CloudShowcase.scss
@@ -30,6 +30,17 @@
 			--provider-rotate: -8deg;
 		}
 	}
+
+	.files-table tr td {
+		// Sync status icons
+		&.status-success :global(svg) {
+			color: var(--fds-system-success);
+		}
+
+		&.status-sync :global(svg) {
+			color: var(--fds-system-attention);
+		}
+	}
 }
 
 // Cloud icon entrance animation
