--- a/src/layout/FeaturesSection/tags/TagsShowcase.scss
+++ b/src/layout/FeaturesSection/tags/TagsShowcase.scss
@@ -3,6 +3,7 @@
 // Tags showcase
 .tags-showcase {
 	@include flex($direction: column, $justify: center, $align: center, $gap: 1rem);
+    position: relative;
 	transition: height 500ms cubic-bezier(0.165, 0.84, 0.44, 1);
 
 	.showcase-panel {
@@ -19,51 +20,35 @@
 
 	.files-table {
 		tr {
-			transition: var(--fds-control-normal-duration) ease;
-			border-radius: var(--fds-control-corner-radius);
-
-			td.tag-cell {
-				display: flex;
-				align-items: center;
-				gap: 1ch;
-				padding: 1rem;
-				padding-inline: 0.5rem 2rem;
-				transition: var(--fds-control-normal-duration) var(--fds-control-fast-out-slow-in-easing) transform;
-
-				:global {
-					svg {
-						animation: none;
-
-						circle {
-							stroke: var(--fds-control-strong-stroke-default);
-							stroke-width: 1px;
-						}
-					}
-				}
-			}
-
 			&.tag-selected {
-				background-color: var(--fds-accent-default);
+                &::after {
+                    background-color: var(--fds-accent-default);
+                }
 
 				td {
 					color: var(--fds-text-on-accent-primary);
 
 					&.tag-cell :global(svg circle) {
-						stroke: var(--fds-control-stroke-on-accent-default)
+						stroke: var(--fds-control-stroke-on-accent-default);
 					}
 				}
 			}
-
-			&::after { transition: background-color var(--fds-control-normal-duration) ease }
 		}
 	}
 
+    .tag-cell-inner {
+        @include flex($align: center, $gap: 6px);
+    }
+
 	.tags-picker {
 		@include flex($justify: center, $gap: 16px);
+        position: absolute;
+        bottom: 0;
 		z-index: 1;
 		padding: 12px;
 		animation-delay: 600ms;
 		box-shadow: var(--fds-inactive-window-shadow);
+        transform: translateY(50%);
 
 		:global(.color-swatch) {
 			animation: var(--fds-control-normal-duration) ease feature-item-scale backwards calc(800ms + (100ms * var(--color-index)));
