--- a/src/layout/FeaturesSection/FeatureShowcase.scss
+++ b/src/layout/FeaturesSection/FeatureShowcase.scss
@@ -45,32 +45,32 @@
 
 	// Rows
 	tr {
-        border-radius: var(--fds-control-corner-radius);
+		border-radius: var(--fds-control-corner-radius);
 		position: relative;
 		block-size: 36px;
 
-        // Tables are rather limited with margins/ To get around
-        // some of these limitations, I'm using apsuedoelement as
-        // a replacement for background-color.
+		// Tables are rather limited with margins/ To get around
+		// some of these limitations, I'm using apsuedoelement as
+		// a replacement for background-color.
 		&:not(:first-child) {
-            &::after {
-                content: "";
-                position: absolute;
-                inset-block-start: 3px;
-                inset-inline-start: 5px;
-                z-index: 0;
-                width: calc(100% - 10px);
-                height: 30px;
-                border-radius: var(--fds-control-corner-radius);
-            }
+			&::after {
+				content: "";
+				position: absolute;
+				inset-block-start: 3px;
+				inset-inline-start: 5px;
+				z-index: 0;
+				width: calc(100% - 10px);
+				height: 3rem;
+				border-radius: var(--fds-control-corner-radius);
+			}
 
-            &:hover::after {
-                background-color: var(--fds-subtle-fill-secondary);
-            }
+			&:hover::after {
+				background-color: var(--fds-subtle-fill-secondary);
+			}
 
-            &:active::after {
-                background-color: var(--fds-subtle-fill-tertiary);
-            }
+			&:active::after {
+				background-color: var(--fds-subtle-fill-tertiary);
+			}
 		}
 	}
 
