Added vercel banner to the site footer (which is now in all pages, not just the homepage). Added a "Powered by Vercel" line to the README. Removed netlify config. The docs sidebar now has a bottom margin to move down the footer.
Signed-off-by: TheOnlyTails <theonlytails@theonlytails.com>

--- a/src/styles/pages/docs.scss
+++ b/src/styles/pages/docs.scss
@@ -11,7 +11,7 @@
 	// Small device support
 	@media screen and (width < 648px) {
 		// Account for the adjusted navbar height on mobile
-		max-block-size: calc(100vh - 64px);
+		block-size: calc(100vh - 64px);
 	}
 }
 
