Fix status icons color in firefox in the cloud feature preview

--- a/src/layout/FeaturesSection/cloud/CloudShowcase.scss
+++ b/src/layout/FeaturesSection/cloud/CloudShowcase.scss
@@ -33,12 +33,12 @@
 
 	.files-table tr td {
 		// Sync status icons
-		&.status-success :global(svg) {
-			color: var(--fds-system-success);
+		&.status-success :global(svg path) {
+			fill: var(--fds-system-success);
 		}
 
-		&.status-sync :global(svg) {
-			color: var(--fds-system-attention);
+		&.status-sync :global(svg path) {
+			fill: var(--fds-system-attention);
 		}
 	}
 }
