Prevent horizontal scrolling; reduce the number of contributors in each row to 25; Update deps;

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -26,6 +26,7 @@
 :root {
 	--font-family-sans-serif: "Segoe UI Variable Display", "Segoe UI", "Inter", sans-serif;
 	--font-family-monospace: "Cascadia Code", "Fira Code", "Consolas", monospace;
+	overflow-x: hidden;
 }
 
 /*
