--- a/src/styles/pages/blogPost.scss
+++ b/src/styles/pages/blogPost.scss
@@ -1,8 +1,10 @@
 @use "../mixins" as *;
 
 .blog-post {
-	@include flex($justify: center);
 	padding: 48px;
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 100%;
 
 	article {
 		max-inline-size: 768px;
