Used logical units instead
Co-authored-by: TheOnlyTails <theonlytails@theonlytails.com>

--- a/src/styles/pages/blogPost.scss
+++ b/src/styles/pages/blogPost.scss
@@ -2,8 +2,7 @@
 
 .blog-post {
 	padding: 48px;
-  margin-right: auto;
-  margin-left: auto;
+  margin-inline: auto;
   max-width: 100%;
 
 	article {
