Used logical units instead
Co-authored-by: TheOnlyTails <theonlytails@theonlytails.com>

--- a/src/styles/pages/blogPost.scss
+++ b/src/styles/pages/blogPost.scss
@@ -3,7 +3,7 @@
 .blog-post {
 	padding: 48px;
   margin-inline: auto;
-  max-width: 100%;
+  max-inline-size: 100%;
 
 	article {
 		max-inline-size: 768px;
