chore(deps): updated sveltekit (& other deps) to the latest version feat: did a bunch of refactoring (made possible by new SK features)
Signed-off-by: TheOnlyTails <theonlytails@theonlytails.com>

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -103,9 +103,13 @@ html {
 
 body {
 	@include flex($direction: column);
+	font-size: 1.4rem;
 	block-size: fit-content;
 	min-block-size: 100%;
-	font-size: 1.4rem;
+
+	&:nth-child(2) {
+		min-block-size: calc(100vh - 58px);
+	}
 }
 
 // Only render inner <img> elements into the DOM
