fixes horizontal scrolling in blog posts (#206)
Co-authored-by: TheOnlyTails <theonlytails@theonlytails.com>

--- a/src/styles/pages/blogPost.scss
+++ b/src/styles/pages/blogPost.scss
@@ -1,8 +1,9 @@
 @use "../mixins" as *;
 
 .blog-post {
-	@include flex($justify: center);
 	padding: 48px;
+  margin-inline: auto;
+  max-inline-size: 100%;
 
 	article {
 		max-inline-size: 768px;
